--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,43 @@ padding: 16px;
     
 }
 
+.Populars {
+  width: 80%;
+  margin: 100px auto;
+  display: flex;
+}
+.Popular-content {
+  width: 50%;
+  padding: 20px;
+}
+.Popular-description{
+margin: 20px 0;
+}
+.tours-images {
+  display: block;
+  width: 50%;
+  height: 100%;
+  align-items: center;
+  margin-left: 53px;
+}
+.tours-images img {
+  width: 100%;
+}
+.common-btn {
+  border-radius: 8px;
+  background: #ff5400;
+  width: 174px;
+  height: 52px;
+  font-size: 20px;
+  font-weight: 800;
+  color: white;
+  border: none;
+  cursor: pointer;
+  margin-top: 20px;
+}
+
+
+
 
   @media screen and (max-width:576px)
   {
@@ -216,6 +253,32 @@ padding: 16px;
     align-items: center;
     
 }
+
+.Populars {
+    width: 90%;
+    flex-direction: column;
+    margin-top: -16px;
+    margin-bottom: 24px;
+  }
+  .Popular-content {
+    width: 100%;
+  }
+  .ccommon-title {
+    font-size: 20px;
+    margin-bottom: 16px;
+  }
+  .Popular-description {
+    font-size: 14px;
+    margin-bottom: 16px;
+    width: 340px;
+  }
+  .tours-images {
+    width: 340px;
+  }
+  .tours-images {
+    margin-top: 24px;
+    margin-left: 0px;
+  }
 
   }
 
