--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@
 
 .header-section {
     width: 80%;
-    margin: 0 auto;
+    margin: 10px auto;
     display: flex;
     align-items: center;
     text-align: center;
@@ -166,8 +166,68 @@ margin: 20px 0;
   cursor: pointer;
   margin-top: 20px;
 }
+.Destination-section{
+width: 80%;
+margin: 0 auto;
+}
+.Destination-text-section{
+    text-align: center;
+}
+.place{
+    position: relative;
+    bottom: 155px;
+    color: white;
+    font-weight: 700;
+    font-size: 30px;
+    }
+.container {
+  margin-top: 48px;
+  align-items: center;
+  text-align: center;
+  justify-content: space-around;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 24px 24px;
+  grid-auto-flow: row;
+  grid-template-areas:
+    "Maldives Maldives Maldives Indonesia Indonesia Indonesia"
+    "Srilanka Srilanka North-America North-America Kashmir Kashmir"
+    "Bangladesh Bangladesh Bandarban Bandarban Bandarban Bandarban";
+}
+.container img {
+  width: 100%;
+  height: 300px;
+  border-radius: 20px;
+}
 
+.Maldives {
+  grid-area: Maldives;
+}
 
+.Indonesia {
+  grid-area: Indonesia;
+}
+
+.Srilanka {
+  grid-area: Srilanka;
+}
+
+.North-America {
+  grid-area: North-America;
+}
+
+.Kashmir {
+  grid-area: Kashmir;
+}
+
+.Bangladesh {
+  grid-area: Bangladesh;
+}
+
+.Bandarban {
+  grid-area: Bandarban;
+}
 
 
   @media screen and (max-width:576px)
@@ -175,13 +235,16 @@ margin: 20px 0;
     .header-section {
         width: 95%;
         margin: 0;
+        margin-bottom: 20px;
       }
       .logo-section {
         width: 100%;
         gap: 9px;
       }
       .logo-section img {
-        width: 28px;
+        margin-left:20px;
+        height:  30px;
+        
       }
       .logo-title {
         font-size: 21px;
@@ -278,6 +341,33 @@ padding: 16px;
   .tours-images {
     margin-top: 24px;
     margin-left: 0px;
+  }
+
+
+  .Destination-section {
+    width: 95%;
+    overflow: hidden;
+  }
+
+  .popular-text {
+    width: 80%;
+  }
+  .container {
+    margin: 0 auto;
+    gap: 16px 16px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+      "Maldives"
+      "Indonesia"
+      "Srilanka"
+      "North-America"
+      "Kashmir"
+      "Bangladesh"
+      "Bandarban";
+  }
+  .container img {
+    width: 95%;
   }
 
   }
