--- a/styles/style.css
+++ b/styles/style.css
@@ -17,8 +17,9 @@
 
 .logo-section {
     display: flex;
-    width: 40%;
+    width: 50%;
     gap: 20px;
+    cursor: pointer;
 }
 
 .logo-section img {
@@ -61,7 +62,7 @@
     background-size: cover;
     border-radius: 16px;
     width: 80%;
-    height: 60vh;
+    height: 80vh;
     margin: 0 auto;
     align-items: center;
     text-align: center;
@@ -93,7 +94,7 @@
 }
 
 .inputs{
-    width: 15.2%;
+    width: 20.2%;
     height: 54px;
     border-radius: 8px;
 background: #FFF;
@@ -115,7 +116,7 @@ font-size: 1rem;
 }
   
 .btn-primary{
-width: 15.2%;
+width: 20.2%;
 height: 54px;
 border-radius: 8px;
 background: #FF5400;
@@ -136,6 +137,8 @@ padding: 16px;
   width: 80%;
   margin: 100px auto;
   display: flex;
+  justify content: space-between;
+  align-items: center;
 }
 .Popular-content {
   width: 50%;
@@ -175,7 +178,7 @@ margin: 0 auto;
 }
 .place{
     position: relative;
-    bottom: 155px;
+    bottom: 168px;
     color: white;
     font-weight: 700;
     font-size: 30px;
@@ -238,6 +241,7 @@ margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 30px;
+    margin-top: 30px;
   }
   .Handpicked-Hotels {
     flex-basis: 573px;
@@ -269,11 +273,13 @@ margin: 0 auto;
 
 .card-section .relative{
     position: relative;
-    left: 350px;
+    left: 260px;
 }
  .blog{
     width: 80%;
     margin: 20px auto;
+    border: 2px solid red;
+    
  }
  .blog-title{
     text-align: center;
@@ -282,47 +288,90 @@ margin: 0 auto;
  }
  .blog-videos{
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
+    grid-template-columns: repeat(2, 1.5fr);
+    gap: 50px;
+    border: 2px solid red;
+    
  }
- .overall-news{
+ .videos{
+    width: 300px;
+    height: 250px;
+ }
+ .Newsletter-section {
     width: 80%;
     margin: 100px auto;
-}
-.news {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 30px;
-}
-.news-content{
-    padding: 40px;
-    border-radius: 16px;
-border: 1px solid #FF5400;
-text-align: left;
-}
-.news-description{
-color: #5A5A5D;
-font-size: 16px;
-font-weight: 400;
-margin-bottom: 50px;
-}
-
-.news .news-content form{
     display: flex;
-    flex-direction: column;
-}
-.sty{
-    border-radius: 8px;
-background: rgba(19, 19, 24, 0.05);
-padding: 10px;
-margin-bottom: 20px;
-}
-.forming {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px; 
-    text-align: left;
+    gap: 24px;
   }
+  .news-from {
+    width: 40%;
+    height: 422px;
+    border-radius: 16px;
+    border: 1px solid #ff5400;
+    padding: 40px;
+  }
+  .news-from .tours-text {
+    width: 350px;
+  }
+  .news-from hr {
+    height: 1px;
+    border: none;
+    background: rgba(19, 19, 24, 0.1);
+  }
+  .news-from input {
+    width: 100%;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    margin-top: 24px;
+    margin-bottom: 16px;
+    border: none;
+  }
+  .news-from #email {
+    margin-top: 0px;
+    margin-bottom: 24px;
+  }
+  .subcribe {
+    width: 100%;
+  }
+  .discount-section {
+    display: block;
+    position: relative;
+    text-align: center;
+    width: 60%;
+    background-image: url('../Images/Rectangle 8 (1).png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    border-radius: 16px;
+  }
+  
+  .discount-section-offer {
+    position: absolute;
+    top: 66%;
+    left: 44%;
+    background-color: #ff5400;
+ 
+    height: 120px;
+    transform: rotate(-24deg);
+    border-radius: 16px;
+    cursor: pointer;
+  }
+  .discount-section-offer h6 {
+    color: #fff;
+    text-align: center;
+    font-family: Mulish;
+    font-size: 24px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+  }
+  .discount-section-offer .save {
+    color: #fff;
+    font-family: Mulish;
+    font-size: 30px;
+    font-weight: 800;
+  }
+ 
 
   footer{
     width: 80%;
@@ -365,8 +414,14 @@ font-weight: 400;
 
 .hori{
     color: black;
+    margin: 40px;
 }
-
+.news-poster .bend{
+    background-color: #ff5400;
+    padding: 20px;
+    position: relative;
+    z-index: 1;
+}
 
   @media screen and (max-width:576px)
   {
@@ -398,7 +453,8 @@ font-weight: 400;
 
    .banner {
     width: 95%;
-    padding-bottom: 30px;
+    height: auto;
+    
     margin-bottom: 30px;
   }
   .banner .banner-title {
@@ -470,8 +526,9 @@ padding: 16px;
   }
   .Popular-description {
     font-size: 14px;
-    margin-bottom: 16px;
-    width: 340px;
+    margin: 10px auto;
+    text-align: justify;
+    width: 80%;
   }
   .tours-images {
     width: 340px;
@@ -489,6 +546,8 @@ padding: 16px;
 
   .popular-text {
     width: 80%;
+    text-align: justify;
+    margin: 10px auto;
   }
   .container {
     margin: 0 auto;
@@ -527,28 +586,69 @@ padding: 16px;
   .card-section .relative{
     position: static;
 }
+.blog{
+    width: 95%;
+    padding: 10px;
+    margin: 0;
+}
 .blog-videos{
     display: grid;
     grid-template-columns: repeat(1, 1fr);
     gap: 30px;
  }
 .videos{
-    width: 350px;
+    width: 100%;
     height: 300px;
 }
-.overall-news{
-    width: 70%;
-}
-.news {
-    grid-template-columns: repeat(1, 1fr);
+.tours-images img {
+    width: 90%;
+    margin-left: 20px;
 }
 
-.forming {
+.Newsletter-section {
+    width: 95%;
+    margin: 30px auto;
+    flex-direction: column;
+    justify-content: center;
     
-    max-width: 200px; 
+  }
+  .news-from {
+    width: auto;
+    height: auto;
+    padding: 24px;
+  }
+
+  .news-from .tours-text {
+    width: auto;
+  }
+  .discount-section {
+    width: 100%;
+    height: 300px;
+  }
+  .discount-section-offer h6 {
+    font-size: 15px;
+  }
+  .discount-section-offer .save {
+    font-size: 21px;
+  }
+
+  .discount-section-offer {
+    width: 200px;
+    height: 79px;
+    top: 60%;
+    left: 32%;
+    transform: rotate(-27deg);
+    cursor: pointer;
+  }
+  footer{
+    margin: 10px auto;
+    width: 90%;
+  }
+  .footer-des{
+    padding: 15px;
+    text-align: justify;
 
   }
-  
 
 
   
