--- a/styles/style.css
+++ b/styles/style.css
@@ -275,10 +275,10 @@ margin: 0 auto;
     position: relative;
     left: 260px;
 }
- .blog{
+.blog{
     width: 80%;
-    margin: 20px auto;
-    border: 2px solid red;
+    margin: 50px auto;
+    
     
  }
  .blog-title{
@@ -286,17 +286,100 @@ margin: 0 auto;
     margin-bottom: 30px;
     font-weight: 800;
  }
+ .center-vid{
+    display: flex;
+    justify-content: center;
+ }
  .blog-videos{
     display: grid;
     grid-template-columns: repeat(2, 1.5fr);
     gap: 50px;
-    border: 2px solid red;
+    
     
  }
  .videos{
     width: 300px;
     height: 250px;
  }
+
+  .discount-banner-image {
+    margin-top: 50px;
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: end;
+    height: 600px;
+    background-image: url(../Images/Group\ 39.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    align-items: center;
+    text-align: center;
+    padding-right: 56px;
+    border-radius: 16px;
+    gap: 24px;
+    
+  }
+  .margin-top {
+    width: 60%;
+    margin-top: 24px;
+    margin-bottom: 30px;
+    justify-content: flex-start;
+    padding-left: 56px;
+    background-image: url(../Images/Group\ 40.png);
+  }
+  .price-table {
+    width: 40%;
+    height: 320px;
+    border-radius: 16px;
+    border: 2px solid #fff;
+    background: rgba(255, 255, 255, 0.8);
+    backdrop-filter: blur(2.5px);
+    /* margin: 56px 56px 56px auto; */
+    text-align: start;
+    padding: 50px;
+  }
+  .icon-ber {
+    display: flex;
+    gap: 24px;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 0px;
+  }
+  .time {
+    color: #5a5a5d;
+    font-family: Mulish;
+  }
+  .price-title {
+    color: #ff5400;
+    font-family: Mulish;
+    font-size: 20px;
+    font-weight: 800;
+    margin: 0;
+    margin-bottom: 24px;
+  }
+  .price-table .card-text {
+    width: 452px;
+  }
+  .new-btn-all {
+    text-align: center;
+    margin-top: 48px;
+    margin-bottom: 100px;
+  }
+  .sell-btn {
+    width: 210px;
+    height: 52px;
+  }
+  
+  .text{
+    color: #5A5A5D;
+font-size: 16px;
+font-weight: 400;
+margin-top: 10px;
+margin-bottom: 10px;
+
+}
+
+ 
  .Newsletter-section {
     width: 80%;
     margin: 100px auto;
@@ -586,6 +669,59 @@ padding: 16px;
   .card-section .relative{
     position: static;
 }
+.discount-banner-image{
+    margin-bottom: 60px;
+    margin-top: 90px;
+}
+.margin-top{
+    margin-bottom: 60px;
+}
+.discount {
+    width: 95%;
+    margin-bottom: 16px;
+  }
+  .discount-banner-image {
+    height: 500px;
+    margin-top: 16px;
+    align-items: flex-end;
+    padding: 16px 16px;
+  }
+  .margin-top {
+    margin-top: 16px;
+  }
+  .price-table {
+    width: 90%;
+    padding: 13px;
+
+    align-items: center;
+  }
+  .price-table .card-text {
+    width: 254px;
+  }
+  .price-title {
+    font-size: 16px;
+  }
+  .Handpicked-title {
+    font-size: 20px;
+  }
+  .icon-ber {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    text-align: start;
+  }
+  .time {
+    margin: 0;
+    padding: 0;
+  }
+  .new-itex {
+    width: 300px;
+  }
+  .new-btn-all {
+    display: none;
+  }
+
+
 .blog{
     width: 90%;
     padding: 10px;
@@ -607,7 +743,7 @@ padding: 16px;
 
 .Newsletter-section {
     width: 95%;
-    margin: 30px auto;
+    margin: 90px auto;
     flex-direction: column;
     justify-content: center;
     
